# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
authors = ["Kent Gibson <warthog618@gmail.com>"]
categories = ["embedded", "os::linux-apis", "development-tools::testing"]
description = "A library to drive gpio-sims for GPIO software testing"
edition = "2021"
rust-version = "1.63"
keywords = ["linux", "gpio", "gpiochip", "library", "testing"]
license = "Apache-2.0 OR MIT"
name = "gpiosim"
repository = "https://github.com/warthog618/gpiosim-rs"
version = "0.3.1"

[dependencies]
global_counter = "0.2"
nohash-hasher = "0.2"
thiserror = "1.0"
cap-std = "3.0"

[dev-dependencies]
criterion = "0.5"
gpiocdev = {version = "0.7", features = ["uapi_v1", "uapi_v2"]}

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "i686-unknown-linux-gnu"]

[[bench]]
name = "pull"
harness = false
