# SPDX-FileCopyrightText: 2022 Kent Gibson <warthog618@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "gpiosim"
version = "0.4.1"
authors = ["Kent Gibson <warthog618@gmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "Drive gpio-sims for GPIO software testing"
repository = "https://github.com/warthog618/gpiosim-rs"
license = "Apache-2.0 OR MIT"
keywords = ["gpio", "gpiochip", "library", "linux", "testing"]
categories = ["development-tools::testing", "embedded", "os::linux-apis"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[[bench]]
harness = false
name = "pull"

[dependencies]
thiserror = "2.0"

[dev-dependencies]
criterion = "0.7"
gpiocdev = { version = "0.8", features = ["uapi_v1", "uapi_v2"] }
